# taipan

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  THANKS.md  main.cpp
ci/: configure.sh  install-cmake-for-linux.sh  install-deps.sh  run.sh
include/: Engine.h  FEN.h  MoveGenerator.h  types.h  version.h
src/: Engine.cpp  FEN.cpp  MoveGenerator.cpp  version.cpp
tests/: CMakeLists.txt  catch.hpp  test_fen.cpp  test_mailbox2fen.cpp  test_make_unmakemove.cpp  test_move_man.cpp  test_perft.cpp  test_silent_move.cpp
